--- a/login/app/src/main/AndroidManifest.xml
+++ b/login/app/src/main/AndroidManifest.xml
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/NoActionBar">
         <activity android:name=".signinActivity">
+
+        </activity>
+        <activity android:name=".loginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".loginActivity">
-
         </activity>
         <activity android:name=".MainActivity"></activity>
     </application>
