--- a/android_CourseStudy/app/src/main/AndroidManifest.xml
+++ b/android_CourseStudy/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/NoActionBar">
-        <activity android:name=".activity.ExerciseDetailActivity"></activity>
+        <activity android:name=".activity.CourseDetailActivity"></activity>
+        <activity android:name=".activity.ExerciseDetailActivity" />
         <activity android:name=".activity.ModifySignatureActivity" />
         <activity android:name=".activity.ModifyNicknameActivity" />
         <activity android:name=".activity.UserInfoActivity" />
